SFUSA/force-app/main/default/objects/Single_Barrel_Verification_Code__mdt/fields/Object__c.field-meta.xml
<CustomField>
        <fullName>Object__c</fullName>
        <description>The objec that will be uploaded via the Salesforce site</description>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                    <default>true</default>
                    <label>Application</label>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>